# eyebeam

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
application/: CMakeLists.txt  application.h  main.cpp  sdl_application.cpp  sdl_application.h
data/scenes/: scene.json
math/: CMakeLists.txt  angle.h  angle_test.cpp  components.h  constexpr_math.cpp  constexpr_math.h  constexpr_math_benchmark.cpp  constexpr_math_test.cpp  direction_typed_test.h  intersection_info.cpp  intersection_info.h  intersection_info_test.cpp  matrix4.cpp  matrix4.h  matrix4_benchmark.cpp  matrix4_test.cpp  normal3.cpp  normal3.h  normal3_test.cpp  point3.cpp  point3.h  point3_benchmark.cpp  point3_test.cpp  quadratic_solver.cpp  quadratic_solver.h  quadratic_solver_benchmark.cpp  quadratic_solver_test.cpp  random_generator.cpp  random_generator.h  ray3.cpp  ray3.h  ray3_benchmark.cpp  ray3_test.cpp  transform.cpp  transform.h  transform_benchmark.cpp  transform_test.cpp  vector3.cpp  vector3.h  vector3_benchmark.cpp  (+1 more)
scene/: CMakeLists.txt  scene.h  scene_factory.cpp  scene_factory.h  scene_factory_json.cpp  scene_factory_json.h  scene_resolution.cpp  scene_resolution.h
